--- a/index.html
+++ b/index.html
@@ -1,12 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
-    />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -140,20 +134,19 @@
         <div class="about__column">
           <h2 class="about__title">Об аукционе</h2>
           <p class="about__text">
-            Здесь вы&nbsp;не&nbsp;встретите очередное пафосное собрание
-            невероятно дорогого антиквариата. Наши лоты вообще не&nbsp;должны
-            были попасть ни&nbsp;на&nbsp;один аукцион. Потому что кому нужен
-            дневник девочки-подростка или картина, которую может нарисовать даже
-            ребёнок? Кому нужны все эти странные вещи, созданные любителями?
+            Здесь вы не встретите очередное пафосное собрание невероятно
+            дорогого антиквариата. Наши лоты вообще не должны были попасть ни на
+            один аукцион. Потому что кому нужен дневник девочки-подростка или
+            картина, которую может нарисовать даже ребёнок? Кому нужны все эти
+            странные вещи, созданные любителями?
           </p>
           <p class="about__text">
             Слишком сложные или, наоборот, слишком простые. Опережающие своё
-            время. В&nbsp;пух и&nbsp;прах растерзанные критиками. Непринятые
-            и&nbsp;непонятые. Когда-то они казались просто неудачными. Но,
-            несмотря на&nbsp;критику, кажущуюся простоту или сложность, сейчас
-            без этих лотов невозможно представить современную культуру. Когда
-            в&nbsp;эти вещи не&nbsp;верил никто, продолжали верить
-            их&nbsp;создатели. И&nbsp;сейчас эти лоты стали культовыми.
+            время. В пух и прах растерзанные критиками. Непринятые и непонятые.
+            Когда-то они казались просто неудачными. Но, несмотря на критику,
+            кажущуюся простоту или сложность, сейчас без этих лотов невозможно
+            представить современную культуру. Когда в эти вещи не верил никто,
+            продолжали верить их создатели. И сейчас эти лоты стали культовыми.
           </p>
         </div>
       </section>
