--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <nav class="header_menu">
         <ul class="header__links-list">
           <li class="header__links-list-item_no-bullit">
-            <a class="header__link header__link_active"> главная </a>
+            <a href="#" class="header__link header__link_active"> главная </a>
           </li>
           <li class="header__links-list-item">
             <a href="#lots" class="header__link"> посмотреть лоты </a>
@@ -32,7 +32,7 @@
           class="header__logo-image"
         />
       </a>
-      <address class="address">
+      <address class="address header__address">
         <a href="tel:+99995555555"> +9 999 555 5555 </a>
         <br />
         <a href="mailto:info@sobaka.ge"> info@sobaka.ge </a>
@@ -153,16 +153,16 @@
     </main>
 
     <footer class="footer">
-      <address class="address">
-        <a class="address" href="tel:+99995555555"> +9 999 555 5555 </a>
+      <address class="address  footer__address">
+        <a href="tel:+99995555555"> +9 999 555 5555 </a>
         <br />
-        <a class="address" href="mailto:info@sobaka.ge"> info@sobaka.ge </a>
+        <a href="mailto:info@sobaka.ge"> info@sobaka.ge </a>
         <p>наб. Принсенграхт 263- 265, Амстердам</p>
       </address>
       <nav class="footer__menu">
         <ul class="footer__menu-list">
           <li class="footer__menu-list-item">
-            <a class="footer__menu-link footer__menu-link_active">главная</a>
+            <a class="footer__menu-link footer__menu-link_active" href="#">главная</a>
           </li>
           <li class="footer__menu-list-item">
             <a class="footer__menu-link" href="#lots">посмотреть лоты</a>
@@ -183,8 +183,6 @@
               class="footer__social-icon"
               src="./images/yt.svg"
               alt="Иконка YouTube"
-              width="48"
-              height="48"
             />
           </a>
         </li>
@@ -198,8 +196,6 @@
               class="footer__social-icon"
               src="./images/vk.svg"
               alt="Иконка ВКонтакте"
-              width="48"
-              height="48"
             />
           </a>
         </li>
@@ -213,8 +209,6 @@
               class="footer__social-icon"
               src="./images/pinterest.svg"
               alt="Иконка Pinterest"
-              width="48"
-              height="48"
             />
           </a>
         </li>
